// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createStorybookOverride matches snapshot if storybook is false 1`] = `null`;

exports[`createStorybookOverride matches snapshot if storybook is present 1`] = `
{
  "files": [
    "*.stories.*",
  ],
  "overrideType": "eslint-config-galex/storybook",
  "rules": {
    "@typescript-eslint/explicit-module-boundary-types": "off",
    "@typescript-eslint/no-empty-function": "off",
    "import/no-anonymous-default-export": "off",
    "import/no-default-export": "off",
    "react/function-component-definition": "off",
  },
}
`;

exports[`createStorybookOverride matches snapshot if storybook is present, without react and ts 1`] = `
{
  "files": [
    "*.stories.*",
  ],
  "overrideType": "eslint-config-galex/storybook",
  "rules": {
    "import/no-anonymous-default-export": "off",
    "import/no-default-export": "off",
  },
}
`;
